fix carousel on mobile + tablets

--- a/src/components/Carousel/Carousel.scss
+++ b/src/components/Carousel/Carousel.scss
@@ -5,39 +5,15 @@
   &-box {
     display: flex;
     flex-direction: column;
-    min-height: 400px;
+    height: 500px;
     border-style: solid;
     border-width: 2px;
     box-shadow: 20px 20px #19123c;
     background-color: #ffffff;
-    width: 80%;
-    @media (min-width: 1100px){
-      height: 400px;
-      width: calc(100% - 120px);
-    }
-    @media (min-width: 850px) and (max-width: 1100px){
-      height: 500px;
-      width: calc(100% - 120px);
-    }
-    @media (max-width: 850px) and (min-width: 600px) {
-      height: 590px;
-      width: calc(100% - 80px);
-    }
-    @media (max-width: 600px) and (min-width: 500px) {
+    width: 85%;
+    @include tablet {
       height: 580px;
-      width: calc(100% - 60px);
     }
-    @media (max-width: 500px) {
-      @media (min-width: 425px) {
-        margin-left: 4%;
-        margin-right: 12%;
-      }
-      height: 650px;
-      margin-left: 5%;
-      margin-right: 15%;
-    }
-
-
   }
 
   &-header {
@@ -68,8 +44,6 @@
     align-items: center;
     margin-top: 36px;
     margin-bottom: 24px;
-    margin-right: 10px;
-    margin-left: 10px
   }
 
   &-images-box {
@@ -79,36 +53,12 @@
   }
 
   &-card {
-    justify-content: space-evenly;
     align-items: center;
-    margin: auto;
-    height: 100%;
-
+    height: 90%;
+    
     display: flex;
     flex-direction: column;
-    grid-template-rows: 20% 45% 35%;
-    grid-template-areas:
-      "sponsor-logo"
-      "sponsor-desc"
-      "career-button next-button";
-
-    @media (min-width: 1100px){
-      height: 280px;
-    }
-    @media (min-width: 800px) and (max-width: 1100px){
-      height: calc(500px - 125px);
-    }
-    @media (max-width: 800px) and (min-width: 600px) {
-      height: calc(590px - 125px);
-    }
-    @media (max-width: 600px) and (min-width: 450px) {
-      height: calc(485px);
-      padding: 30px 25px 25px 30px;
-    }
-    @media (max-width: 450px) {
-      height: 570px;
-      padding: 20px 15px 15px 15px;
-    }
+    justify-content: space-evenly;
   }
 
   &-link {
@@ -119,13 +69,11 @@
   }
 
   &-text {
-    padding: 10px;
-    width: 90%;
-    margin: auto;
+    width: 90%;  
+    margin: 10px;
   }
 
   &-title {
-    width: 40%;
     text-align: center;
     font-weight: bold;
     p {
@@ -135,30 +83,32 @@
 
   &-image {
     display: block;
-    margin: auto;
     max-width: 100%;
     max-height: 100%;
   }
 
   &-img-wrapper {
-    height: 35%;
-    max-width: 70%;
-    margin: auto;
+    height: 120px;
     display: flex;
     justify-content: center;
     align-items: center;
+    @include tablet {
+      height: 85px;
+    }
     @include phone {
-      height: 10% !important;
+      height: 75px;
     }
     &-bronze {
       margin: 10px 0px;
       display: block;
-      width: 140px;
+      width: 130px;
+      @include phone {
+        width: 120px;
+      }
     }
   }
 
   &-button-section {
-    margin: auto;
     display: flex;
     column-gap: 40px;
     row-gap: 5%;
